--- a/front/index.html
+++ b/front/index.html
@@ -53,21 +53,9 @@
         },
       }
     </script>
-    <script type="importmap">
-{
-  "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "recharts": "https://esm.sh/recharts@^3.6.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "@mui/material": "https://esm.sh/@mui/material@^7.3.6",
-    "@mui/material/": "https://esm.sh/@mui/material@^7.3.6/",
-    "@mui/icons-material": "https://esm.sh/@mui/icons-material@^7.3.6"
-  }
-}
-</script>
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
